<resources>
    <string name="app_name">FamilyShoppingApp</string>
    <string name="default_web_client_id">1034724928436-c5gtq90v40e4kdkq019s4m7690517d5g.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="park_car">Park Car</string>
    <string name="create_new_shoppinglist">Create new shoppinglist</string>
    <string name="my_hidden_gems">My Hidden Gems</string>
    <string name="find_car">Find Car</string>
    <string name="share_with_public">Share</string>
    <string name="tag">tag</string>
    <string name="category">category</string>
    <string name="name">Name</string>
    <string name="ultimate_shopping_app">Ultimate Shopping App</string>
    <string name="navigate_explore_connect"><![CDATA[Create, Navigate & Explore]]></string>
    <string name="welcome_to_the">Welcome to the</string>
    <string name="sign_in_with_google_button">Sign In with Google</string>
    <string name="menu_header_text"><![CDATA[Create, Navigate & Explore]]></string>
    <string name="delete_product_item">Do you want to delete this product?</string>
    <string name="delete_shopping_list_confirmation">Are you sure you want to delete the list \'%1$s\'?</string>
    <string name="add_item_name_hint">Item name</string>
    <string name="delete_image_confirmation_text">Do you want to remove this image?</string>
</resources>