<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/activity_background">


    <Button
        android:id="@+id/btn_google_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="Sign In with Google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shoppingCartIcon" />

    <Button
        android:id="@+id/btn_email_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign Up with Email"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/btn_google_sign_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_email_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign In with Email"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/btn_email_sign_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/shoppingCartIcon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.4"
        app:srcCompat="@drawable/baseline_shopping_cart_24" />

    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/poppins_bold_italic"
        android:text="@string/welcome_to_the"
        android:textColor="#403115"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/shoppingAppTitel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/poppins_bold_italic"
        android:gravity="center"
        android:text="@string/ultimate_shopping_app"
        android:textColor="#403115"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeTextView" />

    <TextView
        android:id="@+id/appText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/poppins_bold_italic"
        android:gravity="center"
        android:text="@string/navigate_explore_connect"
        android:textColor="#403115"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shoppingAppTitel" />
</androidx.constraintlayout.widget.ConstraintLayout>
